# 2dgk

./: .gitignore  2d-games-classes.sln  2d-games-classes.vcxproj  2d-games-classes.vcxproj.filters  CMakeLists.txt  LevelLoader.cpp  LevelLoader.h  Tile.cpp  Tile.h  main.cpp
2d-games-classes/x64/Debug/: 2d-games-classes.exe.recipe  vc143.idb
2d-games-classes/x64/Debug/2d-games-classes.tlog/: 2d-games-classes.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
assets/maps/: map.txt
include/: Camera.h  GameMap.h  LevelLoader.h  Tile.h  TileFactory.h  TileTypes.h
include/balls/: Ball.h  BallFactory.h  BallPhysics.h
include/player/: InputComponent.h  PhysicsComponent.h  PlayerGraphics.h  PlayerObject.h
res/graphics/: MainRocks.ase  MainRocks2.ase  miner.ase  miner_colors.ase  miner_colors_walking.ase  miner_walking.ase  punch_colors_animation.ase  rocks_tiles.ase  rocks_tiles2.ase  rocks_tiles2_tilemap.ase  wizard_walking.ase
res/maps/: labirynth.txt  map.txt
src/: CMakeLists.txt  Camera.cpp  GameMap.cpp  LevelLoader.cpp  Tile.cpp  TileFactory.cpp  main.cpp
src/balls/: Ball.cpp  BallFactory.cpp  BallsPhysics.cpp
src/player/: InputComponent.cpp  PhysicsComponent.cpp  PlayerGraphics.cpp  PlayerObject.cpp
